[package]
name = "gitbrowse"
version = "0.0.6"
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A simple way to browse a git repository"
readme = "README.md"
documentation = "https://docs.rs/gitbrowse"
repository = "https://github.com/trangar/gitbrowse"

[badges]
github = { repository = "Trangar/gitbrowse", workflow = "Rust" }

[dependencies.git2]
version = "0.16"
default-features = false

[features]
unstable = ["git2/unstable"]
default = ["git2/default"]
ssh = ["git2/ssh"]
https = ["git2/https"]
vendored-openssl = ["git2/vendored-openssl"]
ssh_key_from_memory = ["git2/ssh_key_from_memory"]
zlib-ng-compat = ["git2/zlib-ng-compat"]
